--- a/server/config/config.json
+++ b/server/config/config.json
@@ -4,7 +4,8 @@
     "password": "onlab",
     "database": "onlabDB",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": false
   },
   "test": {
     "username": "root",
