--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "axios": "^0.19.2",
     "material-table": "^1.57.2",
     "next": "9.3.4",
+    "next-redux-wrapper": "^6.0.0",
     "react": "16.13.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "16.13.1",
-    "react-material-ui-carousel": "^1.4.3"
+    "react-material-ui-carousel": "^1.4.3",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   }
 }
