--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.10",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
-    "material-table": "^1.57.2",
+    "mapbox-gl": "^1.13.0",
+    "material-table": "^1.69.2",
     "next": "9.3.4",
-    "next-redux-wrapper": "^6.0.0",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-awesome-slider": "^4.1.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
-    "react-material-ui-carousel": "^1.4.3",
-    "react-redux": "^7.2.0",
+    "react-geolocated": "^3.1.0",
+    "react-material-ui-carousel": "^1.9.2",
+    "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-localstorage": "^0.4.1",
