--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "16.13.1",
     "react-geolocated": "^3.1.0",
+    "react-map-gl": "^5.2.10",
     "react-material-ui-carousel": "^1.9.2",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
