--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "szakdoga",
+    "password": "onlab",
     "database": "onlabDB",
     "host": "127.0.0.1",
     "dialect": "mysql"
